--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -32,7 +32,7 @@
 <!-- <pagination *ngIf="totalItems > 20" class="pagination-sm" (ngModel)="page" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage" [maxSize]="maxSize" [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" (numPages)="numPages = $event">
 </pagination> -->
 
-<div class="table-responsive">
+<div class="table-responsive padding-bottom-250">
     <table class="table table-striped">
         <thead>
             <tr>
