--- a/src/app/modules/components/chat-box/message/message.component.html
+++ b/src/app/modules/components/chat-box/message/message.component.html
@@ -1,8 +1,9 @@
 <div class="message-section">
     <div class="all-messages" #scrollMe [scrollTop]="scrollMe.scrollHeight">
-        <p class="chat-date"> <strong>Today</strong> </p>
-        <!-- <p class="message-loading"> <strong>Loading...</strong> </p> -->
-        <div *ngFor="let message of messages" class="message-item" [ngClass]="{'message-item-right': message.admin}">
+        <!-- <p  class="chat-date"> <strong>Today</strong> </p> -->
+        <p *ngIf="chatBoxService.messageLoading$ | async" class="message-loading"> <strong>Loading...</strong> </p>
+        <div *ngFor="let message of messages; let i = index" class="message-item" [ngClass]="{'message-item-right': message.admin}">
+            <p class="chat-date" *ngIf="i === 0 || lastDate !== getDate(message?.created_at)"> <strong *ngIf="setLastDate(message?.created_at)"> {{showDate(message?.created_at)}}</strong> </p>
             <div class="message-wrap" [ngClass]="{'right-box': message.admin}">
                 <span *ngIf="message.body">{{message.body}}
                     <span class="msg-time">{{message.created_at | date: 'h:mm a'}}</span>
@@ -12,78 +13,24 @@
                     <img [src]="message.attachments[0]?.file?.url" width="100px" alt="">
                     <div class="download"><a [href]="message.attachments[0].file.url" target="_blank"><i class="fas fa-cloud-download-alt"></i></a></div>
                 </span>
-                <div *ngIf="!message.body && message.attachments.length>0" class="chat-attach-file-mt">
+                <!-- <div *ngIf="!message.body && message.attachments.length>0" class="chat-attach-file-mt">
                     <div class="download"><a [href]="message.attachments[0].file.url" target="_blank"><i class="fas fa-cloud-download-alt"></i></a></div>
                     <span class="fl-icon"><i class="far fa-file-image ng-star-inserted" aria-hidden="true"></i></span>
                     <span class="fl-name">test file name here test file name here</span>
+                </div> -->
+
+                <div *ngIf="!message.body && message.attachments.length>0" class="chat-attach-file-mt">
+                    <div class="download"><a [href]="message.attachments[0].file_url" target="_blank"><i class="fas fa-cloud-download-alt"></i></a></div>
+                    <span class="fl-icon"><i class="far fa-file-image ng-star-inserted" aria-hidden="true"></i></span>
+                    <span class="fl-name">{{message.attachments[0].file_name}}</span>
                 </div>
             </div>
 
-
         </div>
 
-        <!-- <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
+        <div *ngIf="messages.length === 0" class="start-chat">
+            Start New Chat
         </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.
-                <span class="msg-time">04:27 pm</span>
-            </div>
-        </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box"><img src="assets/img/logo-symbol.png" width="100px" alt=""> <div class="download"><a href="#"><i class="fas fa-cloud-download-alt"></i></a></div> </div>
-        </div> -->
 
-        <!-- <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
-        </div> -->
     </div>
 </div>
