--- a/src/app/modules/components/dropdown-actions/dropdown-actions.component.scss
+++ b/src/app/modules/components/dropdown-actions/dropdown-actions.component.scss
@@ -1,82 +1,93 @@
-
 :host {
-  display: block;
-  position: relative;
-  z-index: 5;
-
-  &.show {
-    z-index: 8;
-  }
-
-  &.show-toggle {
-    .wrap {
-      position: relative;
-      z-index: 1;
+    display: block;
+    position: relative;
+    z-index: 5;
+    &.show {
+        z-index: 8;
     }
-
-    .dropdown {
-      top: 30px;
-      right: -5px;
+    &.show-toggle {
+        .wrap {
+            position: relative;
+            z-index: 1;
+        }
+        .dropdown {
+            top: 30px;
+            right: -5px;
+        }
     }
-  }
 }
 
 .dropdown {
-  font-size: 15px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: white;
-  padding: 10px 10px;
-  box-shadow: 0 10px 15px -5px rgba(#3d5270, .25);
-  border-radius: 4px;
-  min-width: 150px;
-  z-index: 1;
-  border-radius: 6px;
-
-  & > ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
+    font-size: 15px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: white;
+    padding: 10px 10px;
+    box-shadow: 0 10px 15px -5px rgba(#3d5270, .25);
+    border-radius: 4px;
+    min-width: 150px;
+    z-index: 1;
+    border-radius: 6px;
+    &>ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
 }
+
 .dropdown ul li button {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 .label {
-  color: #3d5270;
-  opacity: .4;
-  font-weight: bold;
-  padding: 0 27px;
-  margin-bottom: 11px;
-  text-align: left;
+    color: #3d5270;
+    opacity: .4;
+    font-weight: bold;
+    padding: 0 27px;
+    margin-bottom: 11px;
+    text-align: left;
 }
 
 button {
-  background: none;
-  color: #424242;
-  box-shadow: none;
-  text-align: left;
-  padding: 10px 27px;
-  display: block;
-  width: 100%;
-  border-radius: 4px;
-  font-size: inherit;
-  border-color: transparent;
-
-  &:active,
-  &:focus,
-  &:hover {
+    background: none;
+    color: #424242;
     box-shadow: none;
-  }
+    text-align: left;
+    padding: 10px 27px;
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    font-size: inherit;
+    border-color: transparent;
+    &:active,
+    &:focus,
+    &:hover {
+        box-shadow: none;
+    }
+    &:hover {
+        background: #f4f6f8;
+    }
+    &:active,
+    &:focus {
+        background: rgba(#f4f6f8, .8);
+    }
+}
 
-  &:hover {
-    background: #f4f6f8;
-  }
-
-  &:active,
-  &:focus {
-    background: rgba(#f4f6f8, .8);
-  }
+.mg-drop {
+    min-width: unset;
+    max-width: 320px;
+    top: 36px;
+    li {
+        width: 100%;
+        display: block;
+        button {
+            overflow: hidden;
+            flex-wrap: nowrap;
+            text-overflow: ellipsis;
+            font-size: 12px;
+            height: 26px;
+            padding: 5px 10px;
+        }
+    }
 }
