--- a/src/app/pages/users/components/request-assistance/request-assistance.component.html
+++ b/src/app/pages/users/components/request-assistance/request-assistance.component.html
@@ -1,19 +1,17 @@
 <div class="card-header">
-    <h3>Assistance request</h3>
+    <!-- <h3>Assistance request</h3> -->
 
 
     <form [formGroup]="searchFilterForm">
-        <div class="row">
+        <!-- <div class="row">
 
             <div class="col-sm-6">
-                <label for="role" class="col-form-label">Email:</label>
                 <div>
-                    <input type="text" formControlName="email">
-                    <!-- <input type="text" formControlName="role"> -->
+                    <input type="text" formControlName="email" placeholder="Search by User name or Email">
                 </div>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 <label for="role" class="col-form-label">Status:</label>
                 <div>
                     <select formControlName="status">
@@ -21,9 +19,40 @@
                     </select>
                 </div>
             </div>
+            <div class="col-sm-3">
+                <label for="role" class="col-form-label">Status:</label>
+                <div>
+                    <select formControlName="status">
+                        <option *ngFor="let status of statuses" [value]="status.type">{{status.name}}</option>
+                    </select>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="row top-bar">
+            <div class="col-md-4">
+                <input type="text" formControlName="email" (input)="page=1" placeholder="Search by username/email" class="form-control">
+            </div>
+
+            <div class="col-md-3">
+                <select class="form-control" id="days" formControlName="status">
+                    <option *ngFor="let status of statuses" [value]="status.type">{{status.name}}</option>
+            </select>
+
+            </div>
+            <div class="col-md-3">
+                <select class="form-control" id="days" formControlName="all">
+                <option value="">Select Type of Request</option >
+                <option value="kr">Knowledge Request</option >
+                <option value="tender"> Tender Request</option >
+            </select>
+
+            </div>
+
+            <div class="col-md-2"> <button (click)="ngOnInit()" class="btn btn-primary">Reset</button></div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
 
             <div class="col-sm-6">
                 <label for="role" class="col-form-label">All/KR/Tender:</label>
@@ -32,7 +61,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </form>
 
 </div>
@@ -56,7 +85,7 @@
                     <a *ngIf="item.tender_id" class="set-cursor anchor-color" [routerLink]="['/tenders/details', item?.tender_id]">
                         <strong>{{item?.custom_id}} </strong> {{item?.tender_title}}
                     </a>
-                    <span *ngIf="!item.tender_id">N/A</span>
+                    <span *ngIf="!item.tender_id">{{item.custom_id}}</span>
                 </td>
                 <td><i class="far fa-comments set-cursor" title="Go To Chart" [routerLink]="['./',item.id, 'chat']"></i></td>
             </tr>
