--- a/src/app/pages/users/components/user-statistics/user-statistics.component.html
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.html
@@ -66,7 +66,8 @@
                     <td>{{item.moved_to_compete}}</td>
                     <td>{{item.support_requests}}</td>
                     <td>{{item.tenders_viewed}}</td>
-                    <td>{{item.documents_downloaded}}</td>
+                    <td>{{item.bid_hub_docs_downloaded}}</td>
+                    <td>{{item.bid_academy_docs_downloaded}}</td>
                 </tr>
             </tbody>
             <span *ngIf="userStatistics.length === 0">No Data Found!</span>
