--- a/src/app/modules/components/chat-box/message-type/message-type.component.scss
+++ b/src/app/modules/components/chat-box/message-type/message-type.component.scss
@@ -1,6 +1,7 @@
-.message-section{width: 100%; border:1px solid #ddd; border-radius: 10px; margin: 15px 0 0 0;
+.message-section{width: 100%; margin: 15px 0 0 0;
     form{width: 100%; display: flex;
-    textarea{width: 100%; border:none; font-size: 14px; border-radius:10px; resize: none; padding:12px 10px;}
+    textarea{width: 100%; border:none; font-size: 14px; transition: 0.4s; border:1px solid #ddd; outline: none; border-radius:10px; resize: none; padding:12px 10px;}
+    textarea:focus{border-color: #d66166; transition: 0.4s;}
     }
 .message-txt{flex: 0 0 100%; resize:none; border:none; border-radius: 10px;}
 }
@@ -24,8 +25,16 @@ li{display: inline-block; margin: 0 0 0 10px;
     input[type="file"] {
         display: none;
     }
+}
 
-
+.btn-primary {
+    padding: 10px 20px !important;
+    display: inline-block;
+    position: relative;
+    top: -2px;
+    border-radius: 5px;
+    font-size: 15px;
+    letter-spacing: 0.5px;
 }
 
 }
