--- a/src/app/modules/components/chat-box/message/message.component.scss
+++ b/src/app/modules/components/chat-box/message/message.component.scss
@@ -52,7 +52,7 @@
         overflow-x: auto;
         height: 65vh;
         position: relative;
-        padding: 15px 15px 0 15px;
+        padding: 15px 15px 0 15px; background: #f5f5f5;
         .chat-date {
             text-align: center;
             position: absolute;
@@ -92,7 +92,7 @@
     }
     .all-messages {
         overflow-x: auto;
-        height: 65vh;
+        height: 55vh;
         position: relative;
         padding: 0 15px;
         .chat-date {
@@ -186,7 +186,7 @@
 
 @media(max-width:1440px){
     .message-section{
-.all-messages{height:52vh;
+.all-messages{height:40vh;
     .chat-date:before {
         content: '';
         width: 45%;
