--- a/src/app/pages/users/components/create-user/create-user.component.html
+++ b/src/app/pages/users/components/create-user/create-user.component.html
@@ -143,6 +143,13 @@
                         </ng-select>
                     </div>
                 </div>
+
+                <div class="col-xs-12 col-sm-6">
+                    <label for="assistance_credits" class="col-form-label">Assistance Credits:</label>
+                    <div class="">
+                        <input type="number" formControlName="assistance_credits" class="form-control" id="assistance_credits" placeholder="">
+                    </div>
+                </div>
             </div>
 
             <div class="row" *ngIf="!userId">
