--- a/src/app/pages/users/components/request-assistance/request-assistance.component.html
+++ b/src/app/pages/users/components/request-assistance/request-assistance.component.html
@@ -51,7 +51,8 @@
                 </td>
                 <td class="text-center">{{item?.assistance_assets?.length}}</td>
                 <td>{{item?.status | uppercase}}</td>
-                <td><i class="far fa-comments set-cursor" title="Go To Chart" [routerLink]="['./',item.id, 'chat']"></i><span class="replies-count">{{item?.replies_count}}</span></td>
+                <td><span class="set-cursor" [routerLink]="['/users/assist-requests/',item.id, 'chat']"><i class="far fa-comments" title="Go To Chart"></i><span class="replies-count">{{item?.replies_count}}</span></span>
+                </td>
             </tr>
         </tbody>
         <span *ngIf="requestAssistances?.length === 0">No Data Found!</span>
