--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -451,7 +451,7 @@
     <!-- <div class="modal-body"><label>Are you sure you want to Confirm this User - {{ rowData.email }} ?</label></div> -->
     <form novalidate>
         <div class="col-xs-12 col-sm-6">
-            <label for="assistance_credits" class="col-form-label">Limits:</label>
+            <label for="assistance_credits" class="col-form-label">Assistance Credits:</label>
             <div class="">
                 <input type="number" [(ngModel)]="selectedUser.assistance_credits" [ngModelOptions]="{standalone: true}" class="form-control" id="assistance_credits" placeholder="">
             </div>
