--- a/src/app/pages/users/components/request-assistance/request-assistance.component.html
+++ b/src/app/pages/users/components/request-assistance/request-assistance.component.html
@@ -53,7 +53,12 @@
                 <td class="text-center">{{item?.submission_date ? (item?.submission_date | date : 'dd-MM-yyyy') : '--'}}</td>
                 <td class="text-center">{{item?.assistance_assets?.length}}</td>
                 <td>{{item?.status | uppercase}}</td>
-                <td><span class="set-cursor" [routerLink]="['/users/assist-requests/',item.id, 'chat']"><i class="far fa-comments" title="Go To Chart"></i><span class="replies-count">{{item?.replies_count}}</span></span>
+                <td>
+                    <span class="chat-set set-cursor" [routerLink]="['/users/assist-requests/',item.id, 'chat']">
+                        <i class="far fa-comments" title="Go To Chart"></i>
+                        <span class="replies-count">{{item?.replies_count}}</span>
+                    <span *ngIf="item.admin_unreads_count>0" class="new-message">{{item?.admin_unreads_count}}</span>
+                    </span>
                 </td>
             </tr>
         </tbody>
