--- a/src/app/pages/users/components/request-assistance/request-assistance.component.scss
+++ b/src/app/pages/users/components/request-assistance/request-assistance.component.scss
@@ -12,3 +12,34 @@ td a:hover {
     margin: 0 0 0 3px;
     font-size: 12px;
 }
+
+.chat-set {
+    position: relative;
+    font-size: 17px;
+    color: #169bd5;
+    display: -webkit-box;
+    display: flex;
+    border: 1px solid #cecece;
+    border-radius: 50px;
+    height: 24px;
+    width: 52px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.new-message {
+    position: absolute;
+    top: -10px;
+    right: -3px;
+    background: #2199e8;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 10px;
+}
