--- a/src/app/pages/users/components/create-user/create-user.component.scss
+++ b/src/app/pages/users/components/create-user/create-user.component.scss
@@ -1,26 +1,31 @@
-.card-body{
-  .contacts{
-    .title{
-      margin-top: 35px;
-    }
-    .col-form-label{
-      text-transform: capitalize;
-    }
-  }
-  input:disabled{
-    opacity: 0.5;
-    background: #e1e6ef !important;
-  }
-  ::ng-deep{
-    ng2-timezone-picker{
-      .select2-container--disabled{
-        .selection{
-          .select2-selection{
-            opacity: 0.5;
-            background: #e1e6ef !important;
-          }
+.card-body {
+    .contacts {
+        .title {
+            margin-top: 35px;
         }
-      }
+        .col-form-label {
+            text-transform: capitalize;
+        }
     }
-  }
+    input:disabled {
+        opacity: 0.5;
+        background: #e1e6ef !important;
+    }
+     ::ng-deep {
+        ng2-timezone-picker {
+            .select2-container--disabled {
+                .selection {
+                    .select2-selection {
+                        opacity: 0.5;
+                        background: #e1e6ef !important;
+                    }
+                }
+            }
+        }
+    }
 }
+
+// .range-accordion .btn-link {
+//     width: 100%;
+//     text-decoration-line: none;
+// }
