--- a/src/app/modules/components/chat-box/message-type/message-type.component.scss
+++ b/src/app/modules/components/chat-box/message-type/message-type.component.scss
@@ -42,5 +42,10 @@ li{display: inline-block; margin: 0 0 0 10px;
 .send-btn{background: #13161d; font-size: 14px; border: none; color: #fff; border-radius:5px; width: 45px; height: 45px; text-transform: uppercase; font-weight: 400;
     letter-spacing: 0.6px; transition: 0.4s;}
     .send-btn:hover{background: #d66166; transition: 0.4s;}
-
+.req-closed{margin: 0; width: 100%; display: inline-block;
+    text-align: center;
+    background: #ddd;
+    padding: 20px 0;
+    color: #adadad;
+    font-size: 18px;}
 
