--- a/src/app/modules/components/chat-box/chat-box.component.html
+++ b/src/app/modules/components/chat-box/chat-box.component.html
@@ -3,7 +3,7 @@
         <app-dropdown-actions title="Download Attached" *ngIf="Object.keys(actions).length" label="Download File" [fileDownload]="true" class="op-dots" [actions]="actions" (onSelect)="downloadFile($event)" (mouseleave)="toggle=false">
             <button class="actions" (mouseleave)="toggle=false"><i class="fas fa-cloud-download-alt"></i></button>
         </app-dropdown-actions>
-        <button class="btn btn-primary" (click)="deductCredit()">
+        <button class="btn btn-primary" (click)="deductCredit()" *ngIf="assistanceDetails?.status === 'opened'">
             Deduct Credit
         </button>
     </h3>
