--- a/src/app/pages/users/components/create-user/create-user.component.html
+++ b/src/app/pages/users/components/create-user/create-user.component.html
@@ -11,6 +11,7 @@
                 <ngb-panel id="static-1" formGroupName="user">
 
                     <!-- **************** DO NOT REMOVE ***************** -->
+
                     <ng-template ngbPanelTitle class="accord-btn">
                         <div class="d-flex justify-content-between">
                             <div class="d-flex">User Details</div>
@@ -25,7 +26,7 @@
                             <div class="col-xs-12 col-sm-6">
                                 <label for="email" class="col-form-label">Email:</label>
                                 <div *ngIf="userId" class="input-group">
-                                    <input type="text" class="form-control" [readonly]="!editEmail" formControlName="email" placeholder="" aria-label="email" pattern="/\A([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})\Z/i" aria-describedby="email">
+                                    <input type="text" class="form-control" [readonly]="!editEmail" formControlName="email" placeholder="" aria-label="email" aria-describedby="email">
                                     <div class="input-group-append">
                                         <span class="input-group-text" [ngClass]="{'disabled' : !userId, 'set-cursor' : userId}" id="email" (click)="userId ? (!editEmail ? editEmail=true : resetEmail()) : null">
                                             <i *ngIf="!editEmail" class="fas fa-edit"></i>
