--- a/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
+++ b/src/app/pages/tenders/components/tender-edit/tender-edit.component.html
@@ -39,6 +39,14 @@
 
             </div>
 
+            <div class="form-group row margin-t20">
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button class="btn btn-primary" (click)="submitTenderForm()">Update</button>
+                    <a routerLink="/tenders/list" class="btn btn-secondary">Cancel</a>
+                </div>
+            </div>
+
         </form>
     </div>
 </div>
